# Quick

./: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml
.github/workflows/: android.yml  auto-merge.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/com/ohyooo/quick/: SplashActivity.kt
app/src/main/kotlin/com/ohyooo/quick/app/: App.kt
buildSrc/src/main/kotlin/: dependencies.kt
gradle/: libs.version.toml  libs.versions.toml
kni/: build.gradle.kts  consumer-rules.pro
kni/src/androidMain/kotlin/com/ohyooo/kni/: HelloJni.kt
kni/src/nativeMain/kotlin/: main.kt
rust/: Cargo.toml  build.gradle.kts  consumer-rules.pro
rust/src/: lib.rs
rust/src/main/kotlin/com/ohyooo/rust/: librust.kt
rust/src/main/rust/: Cargo.toml
rust/src/main/rust/src/: lib.rs
